--- a/vidgen-1m/index.html
+++ b/vidgen-1m/index.html
@@ -14,10 +14,10 @@
   <h1><strong>VidGen-1M: A Large-Scale Dataset for Text-to-video Generation</strong></h1>
   <p id="authors" class="serif">
     <span style="font-size: 0.9em">
-    <a href="https://scholar.google.com.hk/citations?user=XprTQQ8AAAAJ&hl=en&oi=ao">Zhiyu Tan<sup>1</sup></a>
-    <a href="https://kobeshegu.github.io/">Xiaomeng Yang<sup>2</sup></a>
-    <a href="https://llm-conditioned-diffusion.github.io/">Luozheng Qin<sup>2</sup></a>
-    <a href="https://scholar.google.com.hk/citations?user=pHN-QIwAAAAJ&hl=en">Hao Li<sup>1&dagger;</sup></a>
+    <a>Zhiyu Tan<sup>1</sup></a>
+    <a>Xiaomeng Yang<sup>2</sup></a>
+    <a>Luozheng Qin<sup>2</sup></a>
+    <a>Hao Li<sup>1&dagger;</sup></a>
     </span>
     <br>
   <span style="font-size: 1.0em; margin-top: 0.6em">
@@ -33,7 +33,9 @@
   <img src="./files/dataset_teaser.png" class="teaser-gif" style="width:60%;"><br>
     <font size="+2">
           <p style="text-align: center;">
-            <a href="https://arxiv.org/abs/xxxx.xxxx" target="_blank">[Arxiv]</a> &nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="https://arxiv.org/abs/2408.02629" target="_blank">[Arxiv]</a> &nbsp;&nbsp;&nbsp;&nbsp;
+	    <a href="https://github.com/SAIS-FUXI/VidGen" target="_blank">[Code]</a> &nbsp;&nbsp;&nbsp;&nbsp;
+	    <a href="https://huggingface.co/Fudan-FUXI/VIDGEN-v1.0" target="_blank">[Model]</a> &nbsp;&nbsp;&nbsp;&nbsp;
             <a href="files/bibtex.txt" target="_blank">[BibTeX]</a>
           </p>
     </font>
@@ -41,7 +43,8 @@
 <div class="content">
   <h2 style="text-align:center;">&#x1F525;News</h2>
   <p>&#x2705; 2024.08.05 We released the paper and the project page.</p>
-  <p>&#x1F4DD; The code and the dataset will coming soon, please stay tuned.</p>
+  <p>&#x2705; 2024.08.07 We released the code and the text-to-video models trained on VidGen-1M.</p>
+  <p>&#x1F4DD; The dataset is uploadding, please stay tuned.</p>
 </div>
 <div class="content">
   <h2 style="text-align:center;">Abstract</h2>
@@ -65,10 +68,10 @@
 </div>
 <div class="content">
   <h2>BibTex</h2>
-  <code> @article{tan2024llmdiffusion,<br>
+  <code> @article{tan2024vidgen,<br>
   &nbsp;&nbsp;title={VidGen-1M: A Large-Scale Dataset for Text-to-video Generation},<br>
   &nbsp;&nbsp;author={Tan, Zhiyu and Yang, Xiaomeng, and Qin, Luozheng and Li Hao},<br>
-  &nbsp;&nbsp;booktitle={arXiv preprint arxiv:xxxx.xxxx},<br>
+  &nbsp;&nbsp;booktitle={arXiv preprint arxiv:2408.02629},<br>
   &nbsp;&nbsp;year={2024}<br>
   } </code> 
 </div>
