--- a/text2video/index.html
+++ b/text2video/index.html
@@ -87,7 +87,7 @@
 
         <div class="content text-center animate__animated animate__fadeInUp" data-aos="fade-up">
             <h2>Abstract</h2>
-            <p></p>
+            <p>We introduce VidGen, a diffusion transformer model designed for generating videos from textual inputs. To adeptly handle the intricacies of video data, we incorporate 3D Variational Autoencoder (VAE) that effectively compresses video across spatial and temporal dimensions. Additionally, we enhance the diffusion transformer by integrating a window-based attention mechanism, specifically tailored for video generation tasks. Unfortunately, training text-to-video generative model from scratch demands significant computational resources and data. To overcome these obstacles, we implement a multi-stage training pipeline that optimizes training efficiency and effectiveness. Employing progressive training methodologies, VidGen is proficient at crafting coherent, long-duration videos with prominent motion dynamics. Our results show that VidGen delivers unprecedented performance, corroborated by comprehensive machine evaluations and human judgments. Model weights for the 3D Causal VAE and VidGen are publicly accessible, promoting further research and application in the field.</p>
         </div>
 
         <div class="content animate__animated animate__fadeInUp" data-aos="fade-up">
