--- a/evalalign/files/leaderboard.html
+++ b/evalalign/files/leaderboard.html
@@ -88,7 +88,7 @@
   <span style="font-size: 1.0em; margin-top: 0.6em">
     <a><sup>1</sup>Fudan University</a>
     <a><sup>2</sup>ShangHai Academy of AI for Science</a>
-    <a><sup>3</sup>Texas A&M University</a>
+    <a><sup>3</sup>Carnegie Mellon University</a>
   <br>
   </span>
 <span style="font-size: 12pt;"><b><sup>&dagger;</sup>Corresponding author & Project lead</b></span>
