--- a/evalalign/index.html
+++ b/evalalign/index.html
@@ -47,7 +47,7 @@
   <p>&#x2705; 2024.06.20 We released the model weights of EvalAlign v1.0 13B on huggingface.</p>
   <p>&#x2705; 2024.06.21 We released the training and inference code of EvalAlign on github.</p>
   <p>&#x2705; 2024.06.27 We released the paper on arxiv.</p>
-  <p>&#x1F4DD; The annotated data and the finetuned 34B EvalAlign models are uploadding, please stay tuned.</p>
+  <p>&#x1F4DD; The annotated data and the finetuned 34B EvalAlign models are uploading, please stay tuned.</p>
 </div>
 <div class="content">
   <h2 style="text-align:center;">Abstract</h2>
