--- a/evalalign/index.html
+++ b/evalalign/index.html
@@ -34,8 +34,9 @@
     <font size="+2">
           <p style="text-align: center;">
       <a href="https://arxiv.org/abs/2406.16562" target="_blank">[Arxiv]</a> &nbsp;&nbsp;&nbsp;&nbsp;
-	    <a href="https://github.com/SAIS-FUXI/EvalAlign" target="_blank">[Code]</a> &nbsp;&nbsp;&nbsp;&nbsp;
-	    <a href="https://huggingface.co/Fudan-FUXI/evalalign-v1.0-13b" target="_blank">[Model]</a> &nbsp;&nbsp;&nbsp;&nbsp;
+      <a href="https://github.com/SAIS-FUXI/EvalAlign" target="_blank">[Code]</a> &nbsp;&nbsp;&nbsp;&nbsp;
+      <a href="https://huggingface.co/Fudan-FUXI/evalalign-v1.0-13b" target="_blank">[Model]</a> &nbsp;&nbsp;&nbsp;&nbsp;
+      <a href="https://huggingface.co/datasets/Fudan-FUXI/EvalAlign-datasets" target="_blank">[Dataset]</a> &nbsp;&nbsp;&nbsp;&nbsp;
       <a href="https://sais-fuxi.github.io/projects/evalalign" target="_blank">[Page]</a> &nbsp;&nbsp;&nbsp;&nbsp;
       <a href="files/leaderboard.html" target="_blank">[Leaderboard]</a> &nbsp;&nbsp;&nbsp;&nbsp;
       <a href="files/bibtex.txt" target="_blank">[BibTeX]</a>
@@ -48,7 +49,7 @@
   <p>&#x2705; 2024.06.21 We released the training and inference code of EvalAlign on github.</p>
   <p>&#x2705; 2024.06.27 We released the paper on arxiv.</p>
   <p>&#x2705; 2024.10.10 We released a new version of the paper on arxiv.</p>
-  <p>&#x1F4DD; The annotated data and the finetuned 34B EvalAlign models are uploading, please stay tuned.</p>
+  <p>&#x2705; 2024.10.16 We released the annotated dataset and the 34B finetuned model.</p>
 </div>
 <div class="content">
   <h2 style="text-align:center;">Abstract</h2>
