--- a/evalalign/files/leaderboard.html
+++ b/evalalign/files/leaderboard.html
@@ -96,11 +96,12 @@
     <font size="+2">
           <p style="text-align: center;">
       <a href="https://arxiv.org/abs/2406.16562" target="_blank">[Arxiv]</a> &nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="https://github.com/SAIS-FUXI/EvalAlign" target="_blank">[Code]</a> &nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="https://huggingface.co/Fudan-FUXI/evalalign-v1.0-13b" target="_blank">[Model]</a> &nbsp;&nbsp;&nbsp;&nbsp;
+      <a href="https://github.com/SAIS-FUXI/EvalAlign" target="_blank">[Code]</a> &nbsp;&nbsp;&nbsp;&nbsp;
+      <a href="https://huggingface.co/Fudan-FUXI/evalalign-v1.0-13b" target="_blank">[Model]</a> &nbsp;&nbsp;&nbsp;&nbsp;
+      <a href="https://huggingface.co/datasets/Fudan-FUXI/EvalAlign-datasets" target="_blank">[Dataset]</a> &nbsp;&nbsp;&nbsp;&nbsp;
       <a href="https://sais-fuxi.github.io/projects/evalalign" target="_blank">[Page]</a> &nbsp;&nbsp;&nbsp;&nbsp;
-      <a href="leaderboard.html" target="_blank">[Leaderboard]</a> &nbsp;&nbsp;&nbsp;&nbsp;
-      <a href="bibtex.txt" target="_blank">[BibTeX]</a>
+      <a href="files/leaderboard.html" target="_blank">[Leaderboard]</a> &nbsp;&nbsp;&nbsp;&nbsp;
+      <a href="files/bibtex.txt" target="_blank">[BibTeX]</a>
           </p>
     </font>
     <table class="leaderboard-table" id="leaderboard">
