--- a/cockatiel/index.html
+++ b/cockatiel/index.html
@@ -69,11 +69,14 @@
 </div>
 <div class="content">
   <h2>BibTex</h2>
-  <code> @article{tan2024evalalign,<br>
-  &nbsp;&nbsp;title={EvalAlign: Evaluating Text-to-Image Models through Precision Alignment of Multimodal Large Models with Supervised Fine-Tuning to Human Annotations},<br>
-  &nbsp;&nbsp;author={Tan, Zhiyu and Yang, Xiaomeng and Qin, Luozheng and Yang, Mengping and Zhang, Cheng and Li, Hao},<br>
-  &nbsp;&nbsp;journal={arXiv preprint arXiv:2406.16562},<br>
-  &nbsp;&nbsp;year={2024}<br>
+  <code> @misc{qin2025cockatielensemblingsynthetichuman,<br>
+  &nbsp;&nbsp;title={Cockatiel: Ensembling Synthetic and Human Preferenced Training for Detailed Video Caption},<br>
+  &nbsp;&nbsp; author={Luozheng Qin and Zhiyu Tan and Mengping Yang and Xiaomeng Yang and Hao Li},<br>
+  &nbsp;&nbsp;year={2025},<br>
+  &nbsp;&nbsp;eprint={2503.09279},<br>
+  &nbsp;&nbsp;archivePrefix={arXiv},<br>
+  &nbsp;&nbsp;primaryClass={cs.CV},<br>
+  &nbsp;&nbsp;url={https://arxiv.org/abs/2503.09279}, <br>
   } </code> 
 </div>
 <div class="content">
