Update news in index.html

--- a/cockatiel/index.html
+++ b/cockatiel/index.html
@@ -42,8 +42,8 @@
 </div>
 <div class="content">
   <h2 style="text-align:center;">&#x1F525;News</h2>
-  <p>&#x2705; 2025.03.12 We released the paper, code and project page of Cockatiel.</p>
-  <p>&#x1F525; The annotated dataset and captioenr model weights are still uploading, which should be finished in days.</p>
+  <p>&#x2705; 2025.03.13 We released the paper, model, inference code and project page of Cockatiel.</p>
+  <p>&#x1F525; The annotated dataset and other code are still uploading, which should be finished in days.</p>
 </div>
 <div class="content">
   <h2 style="text-align:center;">Abstract</h2>
