--- a/uni-cot/index.html
+++ b/uni-cot/index.html
@@ -20,12 +20,12 @@
     <span style="text-align: justify; font-size: 0.9em">
       <a href="https://scholar.google.com/citations?user=41BWCzkAAAAJ&hl=zh-CN&oi=ao">Luozheng Qin</a><sup>1</sup><sup>*</sup>,
       <a href="https://scholar.google.com/citations?user=ZV-ThegAAAAJ&hl=zh-CN&oi=ao">Jia Gong</a><sup>1</sup><sup>*</sup>,
-      <a href="#">Yuqing Sun</a><sup>1</sup><sup>*</sup>,
+      <a href="https://github.com/sunyuqingannie">Yuqing Sun</a><sup>1</sup><sup>*</sup>,
       <a href="https://scholar.google.com/citations?hl=zh-CN&user=so6xMg8AAAAJ">Tianjiao Li</a><sup>3</sup>,
       <br>
       <a href="https://scholar.google.com/citations?user=yF34LtcAAAAJ&hl=zh-CN&oi=ao">Mengping Yang</a><sup>1</sup>,
       <a href="https://scholar.google.com/citations?hl=zh-CN&user=7evPWQYAAAAJ">Xiaomeng Yang</a><sup>1</sup>,
-      <a href="https://scholar.google.com/citations?user=XprTQQ8AAAAJ&hl=en">Zhiyu Tan</a><sup>1,2</sup><sup>+</sup>,
+      <a href="https://github.com/SAIS-FUXI">Zhiyu Tan</a><sup>1,2</sup><sup>+</sup>,
       <a href="https://scholar.google.com/citations?user=pHN-QIwAAAAJ&hl=zh-CN">Hao Li</a><sup>1,2</sup><sup>#</sup>
     </span>
     <br>
