--- a/uni-cot/index.html
+++ b/uni-cot/index.html
@@ -41,6 +41,7 @@
           <p style="text-align: center;">
       <a href="https://sais-fuxi.github.io/projects/uni-cot" target="_blank">[Page]</a> &nbsp;&nbsp;&nbsp;&nbsp;
       <a href="https://github.com/Fr0zenCrane/UniCoT" target="_blank">[Code]</a> &nbsp;&nbsp;&nbsp;&nbsp;
+      <a href="https://github.com/Fr0zenCrane/UniCoT/blob/main/technical_report.md" target="_blank">[Code]</a> &nbsp;&nbsp;&nbsp;&nbsp;
       <a href="https://huggingface.co/Fr0zencr4nE/UniCoT-7B-MoT" target="_blank">[Model]</a> &nbsp;&nbsp;&nbsp;&nbsp;
       <a href="files/bibtex.txt" target="_blank">[BibTeX]</a>
           </p>
