--- a/uni-cot/index.html
+++ b/uni-cot/index.html
@@ -41,12 +41,13 @@
           <p style="text-align: center;">
       <a href="https://sais-fuxi.github.io/projects/uni-cot" target="_blank">[Page]</a> &nbsp;&nbsp;&nbsp;&nbsp;
       <a href="https://github.com/Fr0zenCrane/UniCoT" target="_blank">[Code]</a> &nbsp;&nbsp;&nbsp;&nbsp;
-      <a href="https://github.com/Fr0zenCrane/UniCoT/blob/main/technical_report.md" target="_blank">[Code]</a> &nbsp;&nbsp;&nbsp;&nbsp;
+      <a href="https://github.com/Fr0zenCrane/UniCoT/blob/main/technical_report.md" target="_blank">[Report]</a> &nbsp;&nbsp;&nbsp;&nbsp;
       <a href="https://huggingface.co/Fr0zencr4nE/UniCoT-7B-MoT" target="_blank">[Model]</a> &nbsp;&nbsp;&nbsp;&nbsp;
       <a href="files/bibtex.txt" target="_blank">[BibTeX]</a>
           </p>
     </font>
 </div>
+
 <div class="content">
   <h2 style="text-align:center;">&#x1F525;News</h2>
   <p>&#x2705; 2025.07.29 We released UniCoT-7B-MoT, which extends Bagel-7B-MoT model to perform text-to-image generation witn self-reflection reasoning mechanism.</p>
@@ -66,6 +67,13 @@
   <p>4. <b>Final Result</b>: Aggregate the validated subtask results to generate the final output.</p>
   <p>With these designs, our Uni-CoT framework aims to enable unified large models to tackle a wide range of challenging multimodal applications, including: <b>Highly reliable image generation/editing; Visual planning; Geometric and physical reasoning</b></p>
 </div>
+
+<div class="content">
+  <h2>Case Study</h2>
+  With our Uni-CoT design, currently we have achieve reliable image generation across various scenarios, moreover achieving sota performance on wise benchmark
+  <img src="./files/qualitative_results.png" class="teaser-gif" style="width:75%;">
+</div>
+
 <div class="content">
   <h2>Motivation</h2>
   <p>A major challenge in Uni-CoT learning is the heightened complexity introduced by visual reasoning. Each reasoning step involves not only generating explanatory text but also synthesizing a corresponding image. Producing a high-quality image via VAE consumes approximately 4,096 tokens, with an additional 4,900 tokens required for ViT-based representation, totaling nearly 9,000 tokens per step. This is a significant increase compared to the 512–1,024 tokens typically needed for text-only reasoning, substantially raising the cost of both training and inference. Consequently, when the reasoning chain grows with multiple image-text pairs, the model struggles to converge and generalize effectively, limiting its performance on multimodal tasks.</p>
@@ -73,6 +81,7 @@
   <p>To mitigate the complexity introduced by long multimodal reasoning chains, we reformulate the Uni-CoT process as a Markov Decision Process (MDP), where each step depends solely on the current state. Concretely, we model each reasoning step as a discrete MDP node, which only depends on the preceding step and the task instruction. This formulation enables the model to focus on learning local transition dynamics between adjacent nodes, rather than capturing dependencies across the entire reasoning chain as shown below. Such a design choice significantly reduces computational overhead and improves training efficiency.</p>
   <img src="./files/mdp_process.png" class="teaser-gif" style="width:60%;">
 </div>
+
 <div class="content">
   <h2>Uni-CoT Training Based on MDP Node</h2>
   <figure>
@@ -89,10 +98,7 @@
   <p>Predicting the <b>next state summary</b> given the current state and action.</p>
   <p>Estimating <b>reward</b> that reflect task completion and reasoning quality.</p>
 </div>
-<div class="content">
-  <h2>Case Study</h2>
-  <img src="./files/qualitative_results.png" class="teaser-gif" style="width:75%;">
-</div>
+
 <div class="content">
   <h2>Quantitative Results</h2>
   <p>We compare the proposed MDP-based Uni-CoT (Uni-CoT-MDP) against the traditional long-chain Uni-CoT reasoning baseline (Uni-CoT-LC). Both models are trained for 6,000 steps on a dataset of approximately 10,000 samples. Evaluation is conducted on the WISE benchmark, which is specifically designed to assess the reasoning capabilities of Multimodal Large Language Models (MLLMs). As shown below, the MDP-based formulation consistently outperforms the long-chain baseline across all metrics, demonstrating its superior learning efficiency and output quality.</p>
@@ -143,8 +149,8 @@
       </tr>
     </tbody>
   </table>
-
 </div>
+
 <div class="content">
   <h2>BibTex</h2>
   <code> @misc{Uni-CoT,<br>
@@ -155,9 +161,11 @@
   &nbsp;&nbsp;note         = {Accessed: 2025-07-28}<br>
   } </code> 
 </div>
+
 <div class="content">
   <h2>Acknowledgement</h2>
   The project page template is borrowed from <a href="https://dreambooth.github.io/">DreamBooth</a>.
 </div>
+
 </body>
 </html>
