--- a/uni-cot/index.html
+++ b/uni-cot/index.html
@@ -25,8 +25,8 @@
       <br>
       <a href="https://scholar.google.com/citations?user=yF34LtcAAAAJ&hl=zh-CN&oi=ao">Mengping Yang</a><sup>1</sup>,
       <a href="https://scholar.google.com/citations?hl=zh-CN&user=7evPWQYAAAAJ">Xiaomeng Yang</a><sup>1</sup>,
-      <a href="https://github.com/SAIS-FUXI">Zhiyu Tan</a><sup>1,2</sup><sup>+</sup>,
-      <a href="https://scholar.google.com/citations?user=pHN-QIwAAAAJ&hl=zh-CN">Hao Li</a><sup>1,2</sup><sup>#</sup>
+      <a href="https://github.com/SAIS-FUXI">Zhiyu Tan</a><sup>1,2</sup><sup>#</sup>,
+      <a href="https://scholar.google.com/citations?user=pHN-QIwAAAAJ&hl=zh-CN">Hao Li</a><sup>1,2</sup><sup>&dagger;</sup>
     </span>
     <br>
   <span style="font-size: 1.0em; margin-top: 0.6em">
