--- a/uni-cot/index.html
+++ b/uni-cot/index.html
@@ -15,6 +15,9 @@
 	
 <body>
 <div class="content">
+  <figure style="text-align: center;">
+    <img src="./files/logo.png" class="teaser-gif" style="width:40%;">
+  </figure>
   <h1><strong>Uni-CoT: Towards Unified Chain-of-Thought Reasoning Across Text and Vision</strong></h1>
   <p id="authors" class="serif">
     <span style="text-align: justify; font-size: 0.9em">
@@ -39,7 +42,6 @@
   </p>
     <font size="+2">
           <p style="text-align: center;">
-      <a href="https://sais-fuxi.github.io/projects/uni-cot" target="_blank">[Page]</a> &nbsp;&nbsp;&nbsp;&nbsp;
       <a href="https://github.com/Fr0zenCrane/UniCoT" target="_blank">[Code]</a> &nbsp;&nbsp;&nbsp;&nbsp;
       <a href="https://github.com/Fr0zenCrane/UniCoT/blob/main/technical_report.md" target="_blank">[Report]</a> &nbsp;&nbsp;&nbsp;&nbsp;
       <a href="https://huggingface.co/Fr0zencr4nE/UniCoT-7B-MoT" target="_blank">[Model]</a> &nbsp;&nbsp;&nbsp;&nbsp;
@@ -50,7 +52,7 @@
 
 <div class="content">
   <h2 style="text-align:center;">&#x1F525;News</h2>
-  <p>&#x2705; 2025.07.29 We released UniCoT-7B-MoT, which extends Bagel-7B-MoT model to perform text-to-image generation with self-reflection reasoning mechanism.</p>
+  <p>&#x2705; 2025.07.29 We released UniCoT-7B-MoT, which extends Bagel-7B-MoT model to perform text-to-image generation with self-check (self-reflection) reasoning mechanism.</p>
   <p>&#x1F525; We are still working on the this project to implement more kinds of Chain-of-Thought (CoT) mechanism into unified model, please stay tuned!</p>
 </div>
 
@@ -61,48 +63,23 @@
   <p>Chain-of-Thought (CoT) reasoning has significantly enhanced LLM performance on complex text tasks by encouraging interpretable, step-by-step problem solving. However, extending this paradigm to multimodal tasks presents new challenges. In vision-language scenarios, human cognition depends on understanding how visual states evolve over time, inferring causality and planning based on object movements, spatial interactions, and transformations, which are critical for physical reasoning, visual planning, and story comprehension.</p>
   <p>To bridge this gap, we introduce the Unified Chain-of-Thought (Uni-CoT) framework, designed to empower Multimodal Large Language Models (MLLMs) to perform structured and interpretable reasoning across both text and vision. Uni-CoT first decomposes a given multimodal task into simple, modular steps, and then processes each step either sequentially or in parallel, as illustrated below. Thus, it enables more systematic and scalable reasoning across modalities.</p>
   <p>Specifically, the Uni-CoT reasoning pipeline consists of four key components:</p>
-  <p>1. <b>Planning</b>: Decompose the complex task into a sequence of simpler, manageable subtasks.</p>
-  <p>2. <b>Subtask Execution</b>: Execute each subtask using the unified model with step-by-step reasoning.</p>
-  <p>3. <b>Self-Check</b>: After completing each subtask, perform a validation check to ensure the intermediate result aligns with the intended goal.</p>
-  <p>4. <b>Final Result</b>: Aggregate the validated subtask results to generate the final output.</p>
-  <p>With these designs, our Uni-CoT framework aims to enable unified large models to tackle a wide range of challenging multimodal applications, including: <b>Highly reliable image generation/editing; Visual planning; Geometric and physical reasoning</b></p>
+  <p>&nbsp;&nbsp;&nbsp;1. <b>Planning</b>: Decompose the complex task into a sequence of simpler, manageable subtasks.</p>
+  <p>&nbsp;&nbsp;&nbsp;2. <b>Subtask Execution</b>: Execute each subtask using the unified model with step-by-step reasoning.</p>
+  <p>&nbsp;&nbsp;&nbsp;3. <b>Self-Check</b>: After completing each subtask, perform a validation check to ensure the intermediate result aligns with the intended goal.</p>
+  <p>&nbsp;&nbsp;&nbsp;4. <b>Final Result</b>: Aggregate the validated subtask results to generate the final output.</p>
+  <p>With these designs, our Uni-CoT framework aims to enable unified large models to tackle a wide range of challenging multimodal applications, including: </p>
+  <p>&nbsp;&nbsp;&nbsp;1. <b>Highly reliable image generation/editing; </b></p>
+  <p>&nbsp;&nbsp;&nbsp;2. <b>Visual planning; </b></p>
+  <p>&nbsp;&nbsp;&nbsp;3. <b>Geometric and physical reasoning.</b></p>
 </div>
 
 <div class="content">
-  <h2>Case Study</h2>
-  With our Uni-CoT design, currently we have achieve reliable image generation across various scenarios, moreover achieving sota performance on wise benchmark
+  <h2 style="text-align:center;">Results</h2>
+  With our Uni-CoT design, currently we have achieve reliable image generation across various scenarios, moreover achieving sota performance on <a href="https://github.com/Fr0zenCrane/UniCoT" target="_blank">[WISE]</a> benchmark.
+  <h3>Qualitative Results</h3>
   <img src="./files/qualitative_results.png" class="teaser-gif" style="width:75%;">
-</div>
-
-<div class="content">
-  <h2>Motivation</h2>
-  <p>A major challenge in Uni-CoT learning is the heightened complexity introduced by visual reasoning. Each reasoning step involves not only generating explanatory text but also synthesizing a corresponding image. Producing a high-quality image via VAE consumes approximately 4,096 tokens, with an additional 4,900 tokens required for ViT-based representation, totaling nearly 9,000 tokens per step. This is a significant increase compared to the 512–1,024 tokens typically needed for text-only reasoning, substantially raising the cost of both training and inference. Consequently, when the reasoning chain grows with multiple image-text pairs, the model struggles to converge and generalize effectively, limiting its performance on multimodal tasks.</p>
-  <img src="./files/motivation.png" class="teaser-gif" style="width:75%;">
-  <p>To mitigate the complexity introduced by long multimodal reasoning chains, we reformulate the Uni-CoT process as a Markov Decision Process (MDP), where each step depends solely on the current state. Concretely, we model each reasoning step as a discrete MDP node, which only depends on the preceding step and the task instruction. This formulation enables the model to focus on learning local transition dynamics between adjacent nodes, rather than capturing dependencies across the entire reasoning chain as shown below. Such a design choice significantly reduces computational overhead and improves training efficiency.</p>
-  <img src="./files/mdp_process.png" class="teaser-gif" style="width:60%;">
-</div>
-
-<div class="content">
-  <h2>Uni-CoT Training Based on MDP Node</h2>
-  <figure>
-    <img src="./files/mdp_architecture.png" class="teaser-gif" style="width:60%;">
-    <figcaption>Uni-CoT components that requires loss during training are highlighted in pink.</figcaption>
-</figure>
-  <p>Each MDP node is defined by the following components:</p>
-  <p><b>State \(s_t\)</b>: Current context, refer to last reasoning step, including both text and images.</p>
-  <p><b>Action \(a_t\)</b>: A hybrid operation that involves generating editing instructions and performing corresponding image edits.</p>
-  <p><b>Next State \(s_{t+1}\)</b>: The updated context resulting from the applied action, including the edited image, a textual summary according to the edited image.</p>
-  <p><b>Reward \(r_t\)</b>: A textual conclusion or scalar score that quantifies the alignment between the outcome and the task objective.</p>
-  <p>With above design, our training focuses on three core objectives:</p>
-  <p>Learning to generate <b>hybrid actions</b>*(text and image edits) that drive reasoning progression.</p>
-  <p>Predicting the <b>next state summary</b> given the current state and action.</p>
-  <p>Estimating <b>reward</b> that reflect task completion and reasoning quality.</p>
-</div>
-
-<div class="content">
-  <h2>Quantitative Results</h2>
-  <p>We compare the proposed MDP-based Uni-CoT (Uni-CoT-MDP) against the traditional long-chain Uni-CoT reasoning baseline (Uni-CoT-LC). Both models are trained for 6,000 steps on a dataset of approximately 10,000 samples. Evaluation is conducted on the WISE benchmark, which is specifically designed to assess the reasoning capabilities of Multimodal Large Language Models (MLLMs). As shown below, the MDP-based formulation consistently outperforms the long-chain baseline across all metrics, demonstrating its superior learning efficiency and output quality.</p>
-
+  <h3>Quantitative Results</h3>
+  <h3 style="text-align:center;">WISE</h3>
   <table border="1" cellpadding="8" cellspacing="0" style="border-collapse: collapse; width: 100%; font-family: Arial, sans-serif; margin: 20px 0;">
     <thead>
       <tr>
@@ -118,54 +95,110 @@
     </thead>
     <tbody>
       <tr>
-        <td><strong>Bagel (base)</strong></td>
-        <td><strong>0.76</strong></td>
-        <td><strong>0.69</strong></td>
+        <td>Janus</td>
+        <td>0.16</td>
+        <td>0.26</td>
+        <td>0.35</td>
+        <td>0.28</td>
+        <td>0.30</td>
+        <td>0.14</td>
+        <td>0.23</td>
+      </tr>
+      <tr>
+        <td>MetaQuery</td>
+        <td>0.56</td>
+        <td>0.55</td>
+        <td>0.62</td>
+        <td>0.49</td>
+        <td>0.63</td>
+        <td>0.41</td>
+        <td>0.55</td>
+      </tr>
+      <tr>
+        <td>Bagel</td>
+        <td><b>0.76</b></td>
+        <td><b>0.69</b></td>
         <td><u>0.75</u></td>
         <td><u>0.65</u></td>
         <td><u>0.75</u></td>
-        <td>0.58</td>
+        <td><u>0.58</u></td>
         <td><u>0.70</u></td>
       </tr>
       <tr>
-        <td>Uni-CoT-LC</td>
-        <td>0.73</td>
-        <td><u>0.67</u></td>
+        <td><b>Uni-CoT</b></td>
         <td><u>0.75</u></td>
-        <td>0.60</td>
-        <td><u>0.75</u></td>
-        <td><u>0.65</u></td>
-        <td><u>0.70</u></td>
+        <td><u>0.66</u></td>
+        <td><b>0.78</b></td>
+        <td><b>0.70</b></td>
+        <td><b>0.78</b></td>
+        <td><b>0.71</b></td>
+        <td><b>0.73</b></td>
       </tr>
       <tr>
-        <td><strong>Uni-CoT-MDP</strong></td>
-        <td><u>0.75</u></td>
-        <td>0.66</td>
-        <td><strong>0.78</strong></td>
-        <td><strong>0.70</strong></td>
-        <td><strong>0.78</strong></td>
-        <td><strong>0.71</strong></td>
-        <td><strong>0.73</strong></td>
+        <td><i>GPT4O</i></td>
+        <td><i>0.81</i></td>
+        <td><i>0.71</i></td>
+        <td><i>0.89</i></td>
+        <td><i>0.83</i></td>
+        <td><i>0.79</i></td>
+        <td><i>0.74</i></td>
+        <td><i>0.80</i></td>
       </tr>
     </tbody>
   </table>
 </div>
 
 <div class="content">
-  <h2>BibTex</h2>
-  <code> @misc{Uni-CoT,<br>
-  &nbsp;&nbsp; author       = {SAIS-FUXI},<br>
-  &nbsp;&nbsp; title        = {Uni-CoT: Towards Unified Chain-of-Thought Reasoning Across Text and Vision},<br>
-  &nbsp;&nbsp;howpublished = {\url{https://github.com/Fr0zenCrane/BagelCoT}},<br>
-  &nbsp;&nbsp;year         = {2025},<br>
-  &nbsp;&nbsp;note         = {Accessed: 2025-07-28}<br>
-  } </code> 
+  <h2 style="text-align:center;">Method</h2>
+  <h3>Key Observation</h3>
+  <p>We adapt the unified Bagel-7B-MoT model to perform joint text and image generation in support of UniCoT-style multimodal reasoning. To this end, we fine-tune the model using its native interleaved text-image training paradigm. While this naïve adaptation enables the model to learn basic UniCoT behaviors, we observe significant challenges when scaling to complex reasoning chains involving multiple image-text steps. </p>
+  <p>A primary bottleneck lies in the elevated complexity introduced by visual reasoning. Unlike text-only reasoning, where each step typically consumes 512–1,024 tokens, UniCoT requires generating both a reasoning text and a corresponding image per step. Image synthesis via VAE alone consumes ~4,096 tokens, and encoding the image with a ViT-based representation incurs an additional ~4,900 tokens, resulting in nearly 9,000 tokens per reasoning step. This substantial overhead significantly increases the computational cost of training and inference. As the reasoning chain grows, the model struggles to converge and generalize, ultimately limiting its performance on complex multimodal tasks.</p>
+  <img src="./files/motivation.png" class="teaser-gif" style="width:75%;">
+  <h3>Our Solution</h3>
+  <p>To mitigate the complexity introduced by long multimodal reasoning chains, we reformulate the Uni-CoT process as a Markov Decision Process (MDP), where each step depends solely on the current state. Concretely, we model each reasoning step as a discrete MDP node, which only depends on the preceding step and the task instruction. This formulation enables the model to focus on learning local transition dynamics between adjacent nodes, rather than capturing dependencies across the entire reasoning chain as shown below. Such a design choice significantly reduces computational overhead and improves training efficiency.</p>
+  <img src="./files/mdp_process.png" class="teaser-gif" style="width:60%;">
+  <p>Sepecifically, each MDP node is defined by the following components:</p>
+  <p><b>&nbsp;&nbsp;&nbsp;State \(s_t\)</b>: Current context, refer to last reasoning step, including both text and images.</p>
+  <p><b>&nbsp;&nbsp;&nbsp;Action \(a_t\)</b>: A hybrid operation that involves generating editing instructions and performing corresponding image edits.</p>
+  <p><b>&nbsp;&nbsp;&nbsp;Next State \(s_{t+1}\)</b>: The updated context resulting from the applied action, including the edited image, a textual summary according to the edited image.</p>
+  <p><b>&nbsp;&nbsp;&nbsp;Reward \(r_t\)</b>: A textual conclusion or scalar score that quantifies the alignment between the outcome and the task objective.</p>
+  <figure style="text-align: center;">
+    <img src="./files/mdp_architecture.png" class="teaser-gif" style="width:60%;">
+    <figcaption>Uni-CoT components that requires loss during training are highlighted in pink.</figcaption>
+  </figure>
+  <p>With above design, our training focuses on three core objectives:</p>
+  <p>&nbsp;&nbsp;&nbsp;1. Learning to generate <b>hybrid actions</b> (text and image edits) that drive reasoning progression.</p>
+  <p>&nbsp;&nbsp;&nbsp;2. Predicting the <b>next state summary</b> given the current state and action.</p>
+  <p>&nbsp;&nbsp;&nbsp;3. Estimating <b>reward</b> that reflect task completion and reasoning quality.</p>
+</div>
+
+
+<div class="content">
+  <h2 style="margin-top: 0; color: #333;">BibTeX</h2>
+  <pre style="white-space: pre-wrap; word-break: break-word; font-size: 0.95em; color: #2c3e50;">
+@misc{Uni-CoT,
+  author       = {SAIS-FUXI},
+  title        = {Uni-CoT: Towards Unified Chain-of-Thought Reasoning Across Text and Vision},
+  howpublished = {\url{https://github.com/Fr0zenCrane/BagelCoT}},
+  year         = {2025},
+  note         = {Accessed: 2025-07-28}
+}
+  </pre>
 </div>
 
 <div class="content">
-  <h2>Acknowledgement</h2>
-  The project page template is borrowed from <a href="https://dreambooth.github.io/">DreamBooth</a>.
+  <h2 style="margin-bottom: 12px;">Acknowledgement</h2>
+  <ul style="padding-left: 20px; margin: 0;">
+    <li>
+      We thank the <a href="https://github.com/ByteDance-Seed/Bagel" target="_blank"><strong>ByteDance-Seed</strong></a> team for proposing <strong>Bagel</strong>, a powerful and widely adopted unified model for multimodal understanding and generation. Bagel serves as a strong foundation for our work and enables the development of <strong>Uni-CoT</strong>.
+    </li>
+    <li>
+      We also acknowledge the <a href="https://github.com/PKU-YuanGroup/WISE" target="_blank"><strong>PKU-YuanGroup</strong></a> for introducing <strong>WISE</strong>, a comprehensive benchmark for evaluating text-to-image models on complex semantic understanding and world knowledge integration. Its emphasis on reasoning makes it an ideal testbed for CoT-style self-check in multimodal contexts.
+    </li>
+    <li>
+      The project page design is adapted from <a href="https://dreambooth.github.io/" target="_blank"><strong>DreamBooth</strong></a>, which we gratefully credit for its elegant and effective presentation.
+    </li>
+  </ul>
 </div>
-
 </body>
 </html>
