--- a/uni-cot/index.html
+++ b/uni-cot/index.html
@@ -65,7 +65,7 @@
   <p>Specifically, the Uni-CoT reasoning pipeline consists of four key components:</p>
   <p>&nbsp;&nbsp;&nbsp;1. <b>Planning</b>: Decompose the complex task into a sequence of simpler, manageable subtasks.</p>
   <p>&nbsp;&nbsp;&nbsp;2. <b>Subtask Execution</b>: Execute each subtask using the unified model with step-by-step reasoning.</p>
-  <p>&nbsp;&nbsp;&nbsp;3. <b>Self-Check</b>: After completing each subtask, perform a validation check to ensure the intermediate result aligns with the intended goal.</p>
+  <p>&nbsp;&nbsp;&nbsp;3. <b>Self-Check</b>: After completing each subtask, perform a validation check to ensure the intermediate result aligns with the intended subgoal.</p>
   <p>&nbsp;&nbsp;&nbsp;4. <b>Final Result</b>: Aggregate the validated subtask results to generate the final output.</p>
   <p>With these designs, our Uni-CoT framework aims to enable unified large models to tackle a wide range of challenging multimodal applications, including: </p>
   <p>&nbsp;&nbsp;&nbsp;1. <b>Highly reliable image generation/editing; </b></p>
@@ -179,7 +179,7 @@
 @misc{Uni-CoT,
   author       = {SAIS-FUXI},
   title        = {Uni-CoT: Towards Unified Chain-of-Thought Reasoning Across Text and Vision},
-  howpublished = {\url{https://github.com/Fr0zenCrane/BagelCoT}},
+  howpublished = {\url{https://github.com/Fr0zenCrane/UniCoT}},
   year         = {2025},
   note         = {Accessed: 2025-07-28}
 }
