--- a/uni-cot/index.html
+++ b/uni-cot/index.html
@@ -28,7 +28,8 @@
       <br>
       <a href="https://scholar.google.com/citations?user=yF34LtcAAAAJ&hl=zh-CN&oi=ao">Mengping Yang</a><sup>1</sup>,
       <a href="https://scholar.google.com/citations?hl=zh-CN&user=7evPWQYAAAAJ">Xiaomeng Yang</a><sup>1</sup>,
-      <a href="https://github.com/SAIS-FUXI">Zhiyu Tan</a><sup>1,2</sup><sup>#</sup>,
+      <a href="https://scholar.google.com/citations?hl=en&user=DI2NyPsAAAAJ&view_op=list_works&sortby=pubdate">Chao Qu</a><sup>4</sup>,
+      <a href="https://github.com/SAIS-FUXI">Zhiyu Tan</a><sup>1,2</sup><sup>#&dagger;</sup>,
       <a href="https://scholar.google.com/citations?user=pHN-QIwAAAAJ&hl=zh-CN">Hao Li</a><sup>1,2</sup><sup>&dagger;</sup>
     </span>
     <br>
@@ -36,6 +37,7 @@
     <a><sup>1</sup>ShangHai Academy of AI for Science</a>
     <a><sup>2</sup>Fudan University</a>
     <a><sup>3</sup>Nanyang Technological University</a>
+    <a><sup>4</sup>INFTech</a>
   <br>
   </span>
 <span style="font-size: 12pt;"><b><sup>*</sup>Equal contribution</b><b> <sup>#</sup>Project leader</b><b> <sup>&dagger;</sup>Corresponding author</b></span>
