--- a/uni-cot/index.html
+++ b/uni-cot/index.html
@@ -12,7 +12,8 @@
 </head>
 <style> .centered {text-align: center;}</style>
 
-	
+<meta name="google-site-verification" content="fhj09Oi6LV8is0pK6zlzfKa0UsyeXQu3LjVv5kFsc5c" />
+
 <body>
 <div class="content">
   <figure style="text-align: center;">
